# Chatbot-cpp

./: CMakeLists.txt  README.md
Server/: DisplaySocket.cpp  DisplaySocket.h  database.cpp  database.h  main.cpp
Text/: Greetings.txt  Greetings_key.txt
iniReader/: iniReader.cpp  iniReader.h
settings/: bot.ini
sql/: block.sql  clock.sql  clock_insert.sql  exists.sql  jabber.sql  right.sql  select_users.sql  user.sql
src/: chatbot.cpp  chatbot.h  connectionlistener.cpp  connectionlistener.h  database.cpp  database.h  defaultplugin.cpp  defaultplugin.h  interface.h  jsonwrapper.cpp  jsonwrapper.h  katarina.cpp  katarina.h  loadplugin.cpp  loadplugin.h  main.cpp  plugin.h  sendsocket.cpp  sendsocket.h  user.cpp  user.h
src/plugin/: botplugin.h
src/plugin/clock/: clock.cpp  clock.h
src/plugin/echo/: echo.cpp  echo.h
src/plugin/speak/: speak.cpp  speak.h
src/plugin/system/: system.cpp  system.h
